# sast-dast

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tester.json
sast_dast_validator/: README.md  __init__.py  cli.py  executor.py  models.py  normalizer.py  payload_generator.py  rate_limit.py  tools.py
sast_dast_validator/prompts/: __init__.py  exploit_access.md  exploit_generic.md  exploit_headers.md  exploit_injection.md  exploit_redirect.md  exploit_secrets.md  exploit_ssrf.md  exploit_xss.md
